complete design and interactivity

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   --clr-grad-bottom: hsl(240, 73%, 65%);
   --ff-primary: 'Kumbh Sans', sans-serif;
   --fs-body: 0.75rem;
+  --fs-header: 1.7rem;
 }
 
 *,
@@ -31,5 +32,203 @@ ul[class] {
 }
 
 .flow-content > * + * {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+}
+
+img {
+  max-width: 100%;
+}
+
+body {
+  margin: 0;
+  font-size: var(--fs-body);
+  font-family: var(--ff-primary);
+  line-height: 1.6;
+  color: var(--clr-neutral-400);
+  height: 100vh;
+  background: linear-gradient(var(--clr-grad-top), var(--clr-grad-bottom))
+    no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: var(--fs-header);
+  color: var(--clr-primary);
+  line-height: 1;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.flying-cube {
+  display: none;
+}
+
+.card {
+  background-color: #fff;
+  margin: 1.5rem;
+  margin-top: 8rem;
+  border-radius: 1.5rem;
+  background-image: url('./images/bg-pattern-desktop.svg');
+  background-repeat: no-repeat;
+  background-size: 15rem;
+  background-position: center -8.5rem;
+  display: flex;
+  flex-direction: column;
+  width: 40rem;
+  max-width: 40rem;
+  box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.4);
+  position: relative;
+}
+
+.card .illustration {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.card .illustration picture {
+  margin-top: -6.7rem;
+  margin-left: -2rem;
+}
+
+.card .faq {
+  padding: 3rem 1.5rem;
+  height: 24rem;
+}
+
+.card .faq_item {
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid var(--clr-divider);
+}
+
+.card .faq_question {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.card .faq_question.active-question {
+  color: var(--clr-primary);
+  font-weight: bold;
+}
+
+.card .faq_question:hover {
+  color: var(--clr-accent);
+}
+
+.card .faq_answer {
+  color: var(--clr-neutral-300);
+  padding-right: 0.5rem;
+  overflow: hidden;
+  margin: 0;
+  max-height: 0;
+  transition: all 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+}
+
+.card .show_answer {
+  max-height: 10rem;
+  margin-top: 0.75rem;
+}
+
+@media screen and (min-width: 1024px) {
+  h1 {
+    text-align: left;
+  }
+
+  .flying-cube {
+    display: block;
+    position: absolute;
+    width: 11rem;
+    top: 10rem;
+    left: -5.5rem;
+    transition: all 0.4s cubic-bezier(0.22, 1, 0.36, 1);
+  }
+
+  .move_cube {
+    transform: translateX(-2rem);
+  }
+
+  .card {
+    width: 50rem;
+    max-width: 50rem;
+    margin-top: 1.5rem;
+    flex-direction: row;
+    align-items: center;
+    background-size: 50rem;
+    background-position: -30rem -14.5rem;
+  }
+
+  .card .illustration {
+    overflow: hidden;
+    flex: 1 1 40%;
+  }
+
+  .card .illustration picture {
+    margin: 0;
+    margin-left: -4rem;
+  }
+
+  .card .faq {
+    padding: 4rem 5rem;
+    flex: 1 1 60%;
+    height: 26rem;
+  }
+}
+
+@media screen and (max-height: 400px) {
+  .flow-content > * + * {
+    margin-top: 0.5rem;
+  }
+
+  h1 {
+    text-align: left;
+    margin-bottom: 1rem;
+  }
+
+  .flying-cube {
+    display: block;
+    position: absolute;
+    width: 8rem;
+    top: 8.75rem;
+    left: -4rem;
+    transition: all 0.4s cubic-bezier(0.22, 1, 0.36, 1);
+  }
+
+  .move_cube {
+    transform: translateX(-1.5rem);
+  }
+
+  .card {
+    width: 40rem;
+    max-width: 40rem;
+    flex-direction: row;
+    align-items: center;
+    margin: 0.5rem 2rem;
+    background-size: 30rem;
+    background-position: -14rem -6rem;
+  }
+
+  .card .illustration {
+    overflow: hidden;
+    flex: 1 1 40%;
+  }
+
+  .card .illustration picture {
+    margin: 0;
+    margin-left: -3.3rem;
+  }
+
+  .card .faq {
+    padding: 2rem 3rem;
+    padding-left: 3rem;
+    flex: 1 1 60%;
+    height: 21.5rem;
+  }
+
+  .card .faq_item {
+    padding-bottom: 0.5rem;
+  }
 }
